--- a/styles/style.css
+++ b/styles/style.css
@@ -187,6 +187,7 @@ h1 {
 	font-family: "CMU Classical Serif";
 	font-size: 0.66em;
 	font-weight: bold;
+	font-style: italic;
 }
 #cover p {
 	font-style: italic;
